Kubernetes/nginx-basic/prod/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
  labels:
    app: nginxlabel
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: contour
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nginx-service
                port:
                  number: 8083
